# darling-libdispatch

./: CMakeLists.txt
dispatch/: source.h  time.h
src/: CMakeLists.txt  data.c  internal.h  protocol.defs  queue.c  semaphore.c  source.c
